libvqdr_source_files = []

#add src/common/ to the mix.
libvqdr_source_files += common_source_files

libvqdr_source_files += files([
  'context.vala',
  'dice.vala',
  'root_token.vala',
  'token.vala',
  'variable.vala',
  
  'function/function_token.vala',
  'function/round_up_function_token.vala',
  'function/round_down_function_token.vala',
  
  'operator/add_operator_token.vala',
  'operator/dice_operator_token.vala',
  'operator/divide_operator_token.vala',
  'operator/multiply_operator_token.vala',
  'operator/operator_token.vala',
  'operator/subtract_operator_token.vala',
  'operator/unary_operator.vala',
  
  'value/value_token.vala',
  'value/variable_value_token.vala',
  'value/constant_value_token.vala',
])


subdir_done ()
